Fix sign up page input alignment issue

--- a/src/app/Account/sign-up/sign-up.page.scss
+++ b/src/app/Account/sign-up/sign-up.page.scss
@@ -1,3 +1,10 @@
+ion-row {
+    display: block;
+    ion-list {
+        --border-radius: 20px;
+    }
+}
+
 .sign-in-link {
     text-align: center;
 }
